/*
 * This file was generated by the Gradle 'init' task.
 *
 * This project uses @Incubating APIs which are subject to change.
 */

plugins {
    id 'java-library'
    id 'maven-publish'
    
    id 'net.minecrell.plugin-yml.bukkit' version '0.5.2'
    id 'com.github.johnrengelman.shadow' version '7.1.2'
}

repositories {
    mavenLocal()
    maven {
        url = uri('https://hub.spigotmc.org/nexus/content/repositories/snapshots/')
    }

    maven {
        url = uri('https://repo.rosewooddev.io/repository/public/')
    }

    maven {
        url = uri('https://hub.jeff-media.com/nexus/repository/jeff-media-public/')
    }

    maven {
        url = uri('https://repo.codemc.io/repository/maven-snapshots/')
    }

    maven {
        url = uri('https://maven.enginehub.org/repo/')
    }

    maven {
        url = uri('https://maven.citizensnpcs.co/repo')
    }

    maven {
        url = uri('https://repo.extendedclip.com/content/repositories/placeholderapi/')
    }
    
    maven {
        url = uri('https://repo.minebench.de/')
    }

    maven {
        url = uri('https://jitpack.io')
    }

    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
}

dependencies {
    //SQL
    library 'mysql:mysql-connector-java:8.0.33'
    library 'org.mariadb.jdbc:mariadb-java-client:3.1.4'
    
    api 'net.wesjd:anvilgui:1.9.0-SNAPSHOT'
    api 'org.bstats:bstats-bukkit:3.0.2'
    api 'com.jeff_media:SpigotUpdateChecker:3.0.3'
    api 'com.google.code.gson:gson:2.10.1'
    
    compileOnly 'org.spigotmc:spigot-api:1.16.4-R0.1-SNAPSHOT'
    compileOnly 'com.github.MilkBowl:VaultAPI:1.7'
    compileOnly 'com.sk89q.worldedit:worldedit-bukkit:7.2.14-SNAPSHOT'
    compileOnly 'com.sk89q.worldguard:worldguard-bukkit:7.1.0-SNAPSHOT'
    compileOnly 'com.github.DeadSilenceIV:AdvancedChestsAPI:3.2-BETA'
    compileOnly 'org.black_ixx:playerpoints:3.2.6'
    compileOnly 'me.clip:placeholderapi:2.11.4'
    compileOnly 'net.luckperms:api:5.4'
    compileOnly 'com.acrobot.chestshop:chestshop:3.12.2' //ChestShopAPI
    
    compileOnly ('net.citizensnpcs:citizens-main:2.0.30-SNAPSHOT') {
        exclude group: '*', module: '*'
    }
}

group = 'RentIt'
version = '2.8.2'
description = 'RentIt'
java.sourceCompatibility = JavaVersion.VERSION_1_8

sourceSets {
    main { 
        java { srcDirs = ["src/main/java"] }
        resources { srcDir "src/main/resources" }
    }
}

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

tasks.withType(Javadoc) {
    options.encoding = 'UTF-8'
}

tasks.withType(Copy).all { 
	duplicatesStrategy 'exclude' 
}
tasks.withType(Jar).all { 
	duplicatesStrategy 'exclude' 
}

bukkit {
    name = "${project.name}"
    version = "${project.version}"
    description = 'Player Shop and Hotel Rent System'
    
    website = 'https://github.com/TrueMB/RentIt/'
    author = 'TrueMB'
    main = 'me.truemb.rentit.main.Main'
    
    apiVersion = '1.16'
    
    depend = ['WorldEdit']
    softDepend = ['WorldGuard', 'Citizens', 'Denizen', 'PlaceholderAPI', 'AdvancedChests', 'PlayerPoints', 'Vault']
}

shadowJar {
  relocate 'com.jeff_media.updatechecker', 'me.truemb.rentit.updater'
  relocate 'org.bstats', 'me.truemb.rentit.bstats'
  relocate 'net.wesjd.anvilgui', 'me.truemb.rentit.anvilgui'
  relocate 'com.google.gson', 'me.truemb.rentit.gson'
}
